[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-tianyan"
version = "1.1.3"
description = "Russified Endstone log plugin by Tianyan"
authors = [
    { name = "yuhang", email = "keepsecret@nothing.mc" },
]
readme = "README.md"
keywords = ["endstone", "plugin", "tianyan", "urban"]
[project.urls]
Homepage = "https://github.com/yuhangle/Endstone_TianyanPlugin"
[project.entry-points."endstone"]
tianyan = "endstone_tianyan:TianyanPlugin"
